<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/chat"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/shape"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/login"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_floatingLabel="normal" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_butt_login_start"
            android:text="@string/login"
            />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/forget_password"/>

    </LinearLayout>
    </RelativeLayout>
</ScrollView>