<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/chat"/>

       <TextView
           android:layout_width="300dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:layout_gravity="center"
           android:gravity="center"
           android:background="@drawable/shape"
           android:textSize="20sp"
           android:textStyle="bold"
           android:text="@string/creatnewaccount"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="Username"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/email"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/select_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/Selecteplace"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
            android:inputType="textPassword"
        app:met_floatingLabel="normal"
        android:hint="@string/password"
        />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:background="@drawable/shape_butt_login_start"
            android:text="Sign up"
            />

    </LinearLayout>

    </RelativeLayout>

</ScrollView>